# parallel

./: .gitignore  Cargo.toml  Makefile  README.md  composer.json  php-config-herd
.cargo/: config.toml
pie/: Makefile.frag  config.m4
src/: layout.rs  lib.rs  operations.rs  processor.rs  validators.rs
