[package]
name = "parallel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = { git = "https://github.com/davidcole1340/ext-php-rs", rev = "0b8bf6a557948f4bde24d6f7e179d702ba090613", optional = true }
rayon = "1.10"
memmap2 = "0.9"
serde_json = "1.0"

[features]
default = ["extension"]
extension = ["dep:ext-php-rs"]